# bn-save-cleaner

./: Cargo.toml  all.sh  bn1.sh  bn2.sh  bn3.sh  bn4.sh  bn5.sh  bn6.sh  exe45.sh
data/ロックマンエグゼ/: ROCK_EXE1.sav
data/ロックマンエグゼ２/: ROCK_EXE2_Brother.sav  ROCK_EXE2_Custom.sav  ROCK_EXE2_Guts.sav  ROCK_EXE2_Normal_Saito.sav  ROCK_EXE2_Shield.sav
data/ロックマンエグゼ３ブラック版/: ROCK_EXE3_BK_AquaBrother.sav  ROCK_EXE3_BK_AquaBug.sav  ROCK_EXE3_BK_AquaCustom.sav  ROCK_EXE3_BK_AquaGuts.sav  ROCK_EXE3_BK_AquaShadow.sav  ROCK_EXE3_BK_AquaShield.sav  ROCK_EXE3_BK_ElecBrother.sav  ROCK_EXE3_BK_ElecBug.sav  ROCK_EXE3_BK_ElecCustom.sav  ROCK_EXE3_BK_ElecGuts.sav  ROCK_EXE3_BK_ElecShadow.sav  ROCK_EXE3_BK_ElecShield.sav  ROCK_EXE3_BK_HeatBrother.sav  ROCK_EXE3_BK_HeatBug.sav  ROCK_EXE3_BK_HeatCustom.sav  ROCK_EXE3_BK_HeatGuts.sav  ROCK_EXE3_BK_HeatShadow.sav  ROCK_EXE3_BK_HeatShield.sav  ROCK_EXE3_BK_WoodBrother.sav  ROCK_EXE3_BK_WoodBug.sav  ROCK_EXE3_BK_WoodCustom.sav  ROCK_EXE3_BK_WoodGuts.sav  ROCK_EXE3_BK_WoodShadow.sav  ROCK_EXE3_BK_WoodShield.sav
data/ロックマンエグゼ３通常版/: ROCK_EXE3_WT_AquaBrother.sav  ROCK_EXE3_WT_AquaBug.sav  ROCK_EXE3_WT_AquaCustom.sav  ROCK_EXE3_WT_AquaGround.sav  ROCK_EXE3_WT_AquaGuts.sav  ROCK_EXE3_WT_AquaShield.sav  ROCK_EXE3_WT_ElecBrother.sav  ROCK_EXE3_WT_ElecBug.sav  ROCK_EXE3_WT_ElecCustom.sav  ROCK_EXE3_WT_ElecGround.sav  ROCK_EXE3_WT_ElecGuts.sav  ROCK_EXE3_WT_ElecShield.sav  ROCK_EXE3_WT_HeatBrother.sav  ROCK_EXE3_WT_HeatBug.sav  ROCK_EXE3_WT_HeatCustom.sav  ROCK_EXE3_WT_HeatGround.sav  ROCK_EXE3_WT_HeatGuts.sav  ROCK_EXE3_WT_HeatShield.sav  (+6 more)
(+37 files in other folders)
