[package]
name = "bn-save-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tango-dataview = { path = "../tango/tango-dataview" }
clap = { version = "4.0", features = ["derive"] }
byteorder = "1"
